--- a/src/style/proyect.css
+++ b/src/style/proyect.css
@@ -19,7 +19,7 @@ width: 300px;
 }
 .proyect-text h1{
     color: #FD6D4C;
-    font-size: 30px;
+    font-size: 35px;
     font-weight: 900;
 
 }
@@ -54,7 +54,7 @@ width: 300px;
 
 }
 .proyect-logos img{
-    width: 50px;
+    width: 45px;
     margin-top: -8px;
     margin-left: 5px;
     
@@ -104,3 +104,46 @@ transition: 1s;
     background-color:rgba(161, 20, 119, 0.4);
     transition: 1s;
 }
+
+/*buttons left and right*/
+.button-right{
+    width: 0; 
+    height: 0; 
+    padding: 0em;
+    border-top: 35px solid transparent;
+    border-bottom: 35px solid transparent;
+    border-left: 35px solid #A11477;
+    background-color: transparent;
+    transition: 0.2s;
+    position: absolute;
+    margin-top: 90px;
+    margin-left: 720px;
+
+}
+.button-left{
+    width: 0; 
+    height: 0; 
+    position: absolute;
+    margin-left: -60px;
+    margin-top: 90px;
+    border-top: 35px solid transparent;
+    border-bottom: 35px solid transparent; 
+    border-right:35px solid #A11477; 
+    background-color: transparent;
+    padding: 0em;
+    transition: 0.2s;
+}
+.button-left:hover {
+    border-color: transparent;
+    border-top: 40px solid transparent;
+    border-bottom: 40px solid transparent; 
+    border-right:40px solid #FD6D4C; 
+    transition: 0.2s;
+  }
+  .button-right:hover {
+    border-color: transparent;
+    border-top: 40px solid transparent;
+    border-bottom: 40px solid transparent;
+    border-left: 40px solid #FD6D4C;
+    transition: 0.2s;
+  }
